--- a/source/stylesheets/screen.css.scss
+++ b/source/stylesheets/screen.css.scss
@@ -171,17 +171,6 @@ html, body {
     font-weight: 500;
   }
 
-  .toc-list-h3 {
-    display: none;
-    background-color: $nav-subitem-bg;
-    font-weight: 300;
-  }
-
-  .toc-h3 {
-    padding-left: $nav-padding + $nav-indent + $nav-indent;
-    font-size: 10px;
-  }
-
   .toc-h2 {
     padding-left: $nav-padding + $nav-indent;
     font-size: 12px;
@@ -353,7 +342,7 @@ html, body {
   }
 
   // the div is the tocify hidden div for placeholding stuff
-  &>h1, &>h2, &>h3, &>div {
+  &>h1, &>h2, &>div {
     clear:both;
   }
 
